--- a/src/app/car/car.component.html
+++ b/src/app/car/car.component.html
@@ -1,4 +1,5 @@
 <div class="car"> 
   <h2>Single car templateUrl test</h2>
-  <p>{{ 'Название:' }} {{ carName }}, year: {{ carYear }} </p>
+  <p>{{ 'Название:' }} {{ getName() }}, year: {{ carYear }} </p>
+  <b> {{ 30003 + 2453455 }}</b>
 </div>
