<button [disabled]="!canAddCar" >
Buttton that become active after timeout,
<button [disabled]="!canAddCar" >

--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,4 +1,7 @@
 
+  <!-- (data binding) not active button можно сделать с disabled-->
+  <button [disabled]="!canAddCar" class="btn btn-primary">Add new car</button>
+  <hr>
   <app-car></app-car>
   <app-car></app-car>
 
