--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,30 +1,12 @@
 
-<!-- (data binding) not active button можно сделать с disabled-->
-<!-- Управление аттрибутами через компонент-->
-<!--<button [disabled]="!canAddCar" class="btn btn-primary">Add new car</button> -->
-
-<!-- Связка компонента и шаблона. События -->
-<!-- с помощью ( ) это говорит о том что мы должны передавать что то из шаблона в компонент  -->
-<button [disabled]="!canAddCar" class="btn btn-primary" (click)="addCar()">Add new car</button>
-<b>{{ addCarsStatus }}</b>
+<input type="text" class="form-control" [(ngModel)]="carName">
+<button class="btn btn-primary" (click)="addCar()">Add new car</button>
+<p *ngIf="!addCarStatus; else successStatus">Car was NOT added!</p>
+<ng-template #successStatus>
+    <p>Car was added successfully!</p>
+</ng-template>
 <hr>
 <app-car></app-car>
-<app-car></app-car>
-<hr>
-<!--<input type="text" class="form-control" (input)="onKeyUp($event)">-->
-<!--Способ номер №2   Специальная рефиренция #myInp -->
-<!--<input type="text" class="form-control" #myInp (input)="onKeyUp(myInp.value)">  -->
 
-<!--Способ номер №3 -->
-<!--<input type="text" class="form-control" (keyup)="onKeyUp($event)">-->
-
-<!--Способ номер №4  with enter-->
-<!--<input type="text" class="form-control" (keyup.enter)="onKeyUp($event)">-->
-<!--<p>{{ inputText }}</p>-->
-
-
-<!-- two way binding Связка компонента и шаблона. Двухстороннее связывание  -->
-<input type="text" class="form-control" [(ngModel)]="inputText">
-<p>{{ inputText }}</p> 
 
 
