--- a/src/app/cars/cars.component.css
+++ b/src/app/cars/cars.component.css
@@ -1,6 +1,3 @@
-b {
-    display: block;
-}
 
 ul {
     list-style-type: none;
@@ -9,4 +6,9 @@ ul {
 p {
     color: brown;
     font-size: 1.1em;
+}
+
+.big-text {
+    font-size: 150%;
+    font-family: 'Tahoma';
 }
