--- a/src/app/car/car.component.html
+++ b/src/app/car/car.component.html
@@ -1,5 +1,1 @@
-<div class="car"> 
-  <h2>Single car templateUrl test</h2>
-  <p>{{ 'Название:' }} {{ getName() }}, year: {{ carYear }} </p>
-  <b> {{ 30003 + 2453455 }}</b>
-</div>
+<p>{{ 'Название' }}: {{ getName() }}, Год: {{ carYear }}</p>
