--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -3,5 +3,5 @@
 <button class="btn btn-primary" (click)="addCar()" >Добавить машину</button>
 
 <hr>
-
+<!-- [ carItem Название свойства из компонента] из car.component.ts -->
 <app-car *ngFor="let car of cars"[carItem]="car"></app-car>
