--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,5 +1,5 @@
-<app-add-car (onAddCar)="updateCarList()"></app-add-car>
-<button ()></button>
+<app-add-car (onAddCar)="updateCarList($event)"></app-add-car>
+<!-- <button (click)="onClick()"></button> -->
 <hr>
 <!-- [ carItem Название свойства из компонента] из car.component.ts -->
 <app-car *ngFor="let car of cars"[carItem]="car"></app-car>
