css in components

--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,3 +1,4 @@
+<p>Form for adding a new car</p>
 <app-add-car (onAddCar)="updateCarList($event)"></app-add-car>
 <!-- <button (click)="onClick()"></button> -->
 <hr>
