--- a/src/app/car/car.component.html
+++ b/src/app/car/car.component.html
@@ -1,5 +1,4 @@
 
-
-
-<p>Название: {{ car.name }}, Год: {{ car.year }}</p>
+<h4 class="list-group-item-haeding">Название: {{ car.name }}</h4>        
+<p class="list-group-item-text">Год: {{ car.year }}</p>
 
