--- a/src/app/car/car.component.html
+++ b/src/app/car/car.component.html
@@ -1,4 +1,5 @@
 
-<h4 class="list-group-item-haeding">Название: {{ car.name }}</h4>        
-<p class="list-group-item-text">Год: {{ car.year }}</p>
+<div class="alert alert-info">This car is sold</div>
+
+<ng-content></ng-content>
 
