--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -4,6 +4,9 @@
 <hr>
 
 <div class="list-group">
-<app-car class="list=group-item" *ngFor="let car of cars"[carItem]="car"></app-car>
+    <app-car class="list=group-item" *ngFor="let c of cars"[carItem]="car">
+        <h4 class="list-group-item-haeding">Название: {{ c.name }}</h4>        
+        <p class="list-group-item-text">Год: {{ c.year }}</p>
+    </app-car>
 </div>
 
