Life cycle of component

--- a/src/app/car/car.component.html
+++ b/src/app/car/car.component.html
@@ -1,5 +1,5 @@
 
-<div class="alert alert-info">This car is sold</div>
+<div class="alert alert-info">This car is sold {{ name }}</div>
 
 <ng-content></ng-content>
 
