--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -3,8 +3,14 @@
 <!-- <button (click)="onClick()"></button> -->
 <hr>
 
+<button class="btn btn-success" (click)="changeCarName()">Change car name</button>
+
+<button class="btn btn-danger" (click)="deleteCar()">Change car name</button>
+
+<hr>
+
 <div class="list-group">
-    <app-car class="list=group-item" *ngFor="let c of cars"[carItem]="car">
+    <app-car class="list=group-item" *ngFor="let c of cars"[carItem]="c" [name]="c.name">
         <h4 #carHeading class="list-group-item-heading">Название: {{ c.name }}</h4>        
         <p class="list-group-item-text">Год: {{ c.year }}</p>
     </app-car>
