--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <app-cars></app-cars>
+    <div class="col-xs-8 col-xs-offset-2">
+
+
+      <h3 appBackground>{{ headerText }}</h3>
+
     </div>
-  </div>
 </div>
 
 
