--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <div class="col-xs-8 col-xs-offset-2">
 
 
-      <h3 appBackground>{{ headerText }}</h3>
+      <h3 [appBackground]="'Red'" [defaultColor]="'transparent'">{{ headerText }}</h3>
 
     </div>
 </div>
