--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,15 +3,29 @@
 
     <div class="form-group">
       <label>Email</label>
-      <input type="text" class="form-control">
+      <input 
+      type="text" 
+      class="form-control"
+      ngModel 
+      name="email"
+      >
     </div>
     <div class="form-group">
       <label>Пароль</label>
-      <input type="password" class="form-control">
+      <input 
+      type="password" 
+      class="form-control"
+      ngModel 
+      name="pass"
+      >
     </div>
     <div class="form-group">
       <label>Выберите страну</label>
-      <select class="form-control">
+      <select 
+      class="form-control"
+      ngModel 
+      name="country"
+      >
         <option value="ru">Россия</option>
         <option value="by">Белоруссия</option>
         <option value="ua">Украина</option>
@@ -19,7 +33,12 @@
     </div>
     <div class="radio" *ngFor="let ans of answers">
       <label>
-        <input type="radio" [value]="ans.type"> {{ans.text}}
+        <input 
+          type="radio" 
+          [value]="ans.type"
+          ngModel 
+          name="answer"
+          > {{ans.text}}
       </label>
     </div>
     <button class="btn btn-success" type="submit">Сохранить</button>
