--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="col-xs-8 col-xs-offset-2">
 <!-- Добавляем специальный медот onSubmit (и передаем тот метод который будеи выполнятся) -->
-  <form (ngSubmit)="submitForm(form)" #form>  
+  <form (ngSubmit)="submitForm(form)" #form="ngForm">  
+  <!-- <form (ngSubmit)="submitForm()" #form="ngForm">   -->
     <div class="form-group">
       <label>Email</label>
       <input 
