--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="col-xs-8 col-xs-offset-2">
-
   <form (ngSubmit)="submitForm(form)" #form="ngForm">  
-    <div class="form-group">
+
+    <div class="form-group" [ngClass]="{'has-error': email.invalid && email.touched}">
       <label>Email</label>
       <input 
       type="text" 
@@ -10,9 +10,12 @@
       name="email"
       required  
       email
-      >                 <!-- Directive "required" -->
+      #email="ngModel"   
+      >        
+      <p *ngIf="email.invalid && email.touched">נא הקלידו כתובת דואר אלקטרוני שגויה</p>         
     </div>
-    <div class="form-group">
+
+    <div class="form-group" [ngClass]="{'has-error': email.invalid && email.touched}">
       <label>Пароль</label>
       <input 
       type="password" 
@@ -20,8 +23,11 @@
       ngModel 
       name="pass"
       required
+      #pass="ngModel"
       >
+      <p *ngIf="pass.invalid && pass.touched">סיסמה שגויה</p> 
     </div>
+
     <div class="form-group">
       <label>Выберите страну</label>
       <select 
@@ -35,6 +41,7 @@
         <option value="ua">Украина</option>
       </select>
     </div>
+
     <div class="radio" *ngFor="let ans of answers">
       <label>
         <input 
@@ -46,6 +53,7 @@
           > {{ans.text}}
       </label>
     </div>
+
     <button 
       class="btn btn-success" 
       type="submit"
