--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
       <label>Выберите страну</label>
       <select 
       class="form-control"
-      ngModel 
+      [ngModel]="defaultCountry"
       name="country"
       required
       >
@@ -47,7 +47,7 @@
         <input 
           type="radio" 
           [value]="ans.type"
-          ngModel 
+          [ngModel]="defaultAnswer" 
           name="answer"
           required
           > {{ans.text}}
