--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,38 @@
 <div class="col-xs-8 col-xs-offset-2">
   <form (ngSubmit)="submitForm(form)" #form="ngForm">  
 
-    <div class="form-group" [ngClass]="{'has-error': email.invalid && email.touched}">
-      <label>Email</label>
-      <input 
-      type="text" 
-      class="form-control"
-      ngModel 
-      name="email"
-      required  
-      email
-      #email="ngModel"   
-      >        
-      <p *ngIf="email.invalid && email.touched">נא הקלידו כתובת דואר אלקטרוני שגויה</p>         
+
+    <!-- Grouping of inputs in one object -->
+    <div ngModelGroup="user" #user="ngModelGroup">
+      <div class="form-group" [ngClass]="{'has-error': email.invalid && email.touched}">
+        <label>Email</label>
+        <input 
+        type="text" 
+        class="form-control"
+        ngModel 
+        name="email"
+        required  
+        email
+        #email="ngModel"   
+        >        
+        <p *ngIf="email.invalid && email.touched">נא הקלידו כתובת דואר אלקטרוני שגויה</p>
+      </div>
+
+      <div class="form-group" [ngClass]="{'has-error': pass.invalid && pass.touched}">
+        <label>Пароль</label>
+        <input 
+        type="password" 
+        class="form-control"
+        ngModel 
+        name="pass"
+        required
+        #pass="ngModel"
+        >
+        <p *ngIf="pass.invalid && pass.touched">סיסמה שגויה</p> 
+      </div>
+      <p *ngIf="user.invalid && user.touched">הנתונים של המשתמש לא נכונים!</p>
     </div>
 
-    <div class="form-group" [ngClass]="{'has-error': email.invalid && email.touched}">
-      <label>Пароль</label>
-      <input 
-      type="password" 
-      class="form-control"
-      ngModel 
-      name="pass"
-      required
-      #pass="ngModel"
-      >
-      <p *ngIf="pass.invalid && pass.touched">סיסמה שגויה</p> 
-    </div>
 
     <div class="form-group">
       <label>Выберите страну</label>
