--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,79 +1,31 @@
 <div class="col-xs-8 col-xs-offset-2">
-  <form (ngSubmit)="submitForm(form)" #form="ngForm">  
-
-
-    <!-- Grouping of inputs in one object -->
-    <div ngModelGroup="user" #user="ngModelGroup">
-      <div class="form-group" [ngClass]="{'has-error': email.invalid && email.touched}">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <div class="form-group">
         <label>Email</label>
-        <input 
-        type="text" 
-        class="form-control"
-        ngModel 
-        name="email"
-        required  
-        email
-        #email="ngModel"   
-        >        
-        <p *ngIf="email.invalid && email.touched">נא הקלידו כתובת דואר אלקטרוני שגויה</p>
-        <button type="button" class="btn btn-primary" (click)="addRandEmail()">Добавить случайный email</button>
+        <input type="text" class="form-control" formControlName="email">
       </div>
-
-      <div class="form-group" [ngClass]="{'has-error': pass.invalid && pass.touched}">
+      <div class="form-group">
         <label>Пароль</label>
-        <input 
-        type="password" 
-        class="form-control"
-        ngModel 
-        name="pass"
-        required
-        #pass="ngModel"
-        >
-        <p *ngIf="pass.invalid && pass.touched">סיסמה שגויה</p> 
+        <input type="password" class="form-control" formControlName="pass">
       </div>
-      <p *ngIf="user.invalid && user.touched">הנתונים של המשתמש לא נכונים!</p>
-    </div>
-
-
     <div class="form-group">
       <label>Выберите страну</label>
-      <select 
-      class="form-control"
-      [ngModel]="defaultCountry"
-      name="country"
-      required
-      >
+      <select class="form-control" formControlName="country">
         <option value="ru">Россия</option>
         <option value="by">Белоруссия</option>
         <option value="ua">Украина</option>
       </select>
     </div>
-
     <div class="radio" *ngFor="let ans of answers">
       <label>
-        <input 
-          type="radio" 
-          [value]="ans.type"
-          [ngModel]="defaultAnswer" 
+        <input
+          type="radio"
           name="answer"
-          required
-          > {{ans.text}}
+          formControlName="answer"
+          [value]="ans.type"
+        > {{ans.text}}
       </label>
     </div>
-
-    <button 
-      class="btn btn-success" 
-      type="submit"
-      [disabled]="!form.valid"
-    >Сохранить</button>
-
+    <button class="btn btn-success" type="submit">Сохранить</button>
   </form>
-
-  <!-- if form submited = true -->
-  <div *ngIf="isSubmited">
-    <pre>
-      {{ formData | json }}       <!-- using pipe here -->
-    </pre>
-  </div>
-
 </div>
