--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,10 @@
         <label>Email</label>
         <input type="text" class="form-control" formControlName="email">
       </div>
-      <div class="form-group">
+      <div class="form-group" [ngClass]="{has-error: form.get('pass').invalid && form.get('pass').touched}">
         <label>Пароль</label>
         <input type="password" class="form-control" formControlName="pass">
+        <!-- <p *ngIf="form.get('pass').invalid && form.get('pass').touched">Password can not be empty!</p> -->
       </div>
     <div class="form-group">
       <label>Выберите страну</label>
@@ -26,6 +27,10 @@
         > {{ans.text}}
       </label>
     </div>
-    <button class="btn btn-success" type="submit">Сохранить</button>
+    <button 
+    class="btn btn-success" 
+    type="submit"
+    [disabled]="form.invalid"
+    >Сохранить</button>
   </form>
 </div>
