--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,18 @@
 <div class="col-xs-8 col-xs-offset-2">
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
-      <div class="form-group">
+
+      <div class="form-group" [ngClass]="{'has-error': form.get('email').invalid && form.get('email').touched}">
         <label>Email</label>
         <input type="text" class="form-control" formControlName="email">
+        <p *ngIf="form.get('email').invalid && form.get('email').touched">Email is not valid!</p>
       </div>
+
       <div class="form-group" [ngClass]="{'has-error': form.get('pass').invalid && form.get('pass').touched}">
         <label>Пароль</label>
         <input type="password" class="form-control" formControlName="pass">
         <p *ngIf="form.get('pass').invalid && form.get('pass').touched">Password can not be empty!</p>
       </div>
+
     <div class="form-group">
       <label>Выберите страну</label>
       <select class="form-control" formControlName="country">
@@ -17,6 +21,7 @@
         <option value="ua">Украина</option>
       </select>
     </div>
+
     <div class="radio" *ngFor="let ans of answers">
       <label>
         <input
