--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,19 @@
 <div class="col-xs-8 col-xs-offset-2">
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
-      <div class="form-group" [ngClass]="{'has-error': form.get('email').invalid && form.get('email').touched}">
+    <div formGroupName="user">
+      <div class="form-group" [ngClass]="{'has-error': form.get('user.email').invalid && form.get('user.email').touched}">
         <label>Email</label>
         <input type="text" class="form-control" formControlName="email">
-        <p *ngIf="form.get('email').invalid && form.get('email').touched">Email is not valid!</p>
+        <p *ngIf="form.get('user.email').invalid && form.get('user.email').touched">Email is not valid!</p>
       </div>
 
-      <div class="form-group" [ngClass]="{'has-error': form.get('pass').invalid && form.get('pass').touched}">
+      <div class="form-group" [ngClass]="{'has-error': form.get('user.pass').invalid && form.get('user.pass').touched}">
         <label>Пароль</label>
         <input type="password" class="form-control" formControlName="pass">
-        <p *ngIf="form.get('pass').invalid && form.get('pass').touched">Password can not be empty!</p>
+        <p *ngIf="form.get('user.pass').invalid && form.get('user.pass').touched">Password can not be empty!</p>
       </div>
+    </div>
 
     <div class="form-group">
       <label>Выберите страну</label>
