--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,10 @@
       <div class="form-group" [ngClass]="{'has-error': form.get('user.pass').invalid && form.get('user.pass').touched}">
         <label>Пароль</label>
         <input type="password" class="form-control" formControlName="pass">
-        <p *ngIf="form.get('user.pass').invalid && form.get('user.pass').touched">Password can not be empty!</p>
+        <p *ngIf="form.get('user.pass').invalid && form.get('user.pass').touched">
+          <span *ngIf="form.get('user.pass').errors['required']">Password can not be empty!</span>
+          <span *ngIf="form.get('user.pass').errors['lengthError']">Password can not be short then 4 characters!</span>
+        </p>
       </div>
     </div>
 
