--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,11 @@
       <div class="form-group" [ngClass]="{'has-error': form.get('user.email').invalid && form.get('user.email').touched}">
         <label>Email</label>
         <input type="text" class="form-control" formControlName="email">
-        <p *ngIf="form.get('user.email').invalid && form.get('user.email').touched">Email is not valid!</p>
+        <p *ngIf="form.get('user.email').invalid && form.get('user.email').touched"
+        >
+        <span *ngIf="form.get('user.email').errors['email']">This Email is not valid!</span> 
+        <span *ngIf="form.get('user.email').errors['emailIsUsed']">This Email already exists in database!</span> 
+      </p>
       </div>
 
       <div class="form-group" [ngClass]="{'has-error': form.get('user.pass').invalid && form.get('user.pass').touched}">
@@ -40,7 +44,7 @@
     <button 
     class="btn btn-success" 
     type="submit"
-    [disabled]="form.invalid"
+    [disabled]="form.invalid" 
     >Сохранить</button>
   </form>
 </div>
