--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
         {{car.id}}
       </span> 
       {{car.name}} 
-      <button class="btn btn-xs btn-info" (click)="setNewColor()">Change color</button>
+      <button class="btn btn-xs btn-info" (click)="setNewColor(car)">Change color</button>
     </li>
   </ul>
 </div>
