--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
       </span> 
       {{car.name}} 
       <button class="btn btn-xs btn-info" (click)="setNewColor(car)">Change color</button>
+      <button class="btn btn-xs btn-danger" (click)="deleteCar(car)">Delete</button>
     </li>
   </ul>
 </div>
