--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="col-xs-8 col-xs-offset-2">
+
+  <h1>{{ appTitle | async }}</h1>
+
   <input type="text" class="form-control" [(ngModel)]="carName">
 
   <hr>
@@ -6,7 +9,7 @@
   <button class="btn btn-success" (click)="addCar()">Добавить машину</button>
   <hr>
   <ul class="list-group">
-    <li class="list-group-item" *ngFor="let car of cars">
+    <li class="list-group-item" *ngFor="let car of cars | async">
       <span class="badge" [ngStyle]="{background: car.color}">
         {{car.id}}
       </span> 
