--- a/src/app/car-page/car-page.component.html
+++ b/src/app/car-page/car-page.component.html
@@ -1,3 +1,4 @@
-<p>
-  car-page works!
-</p>
+<h2>Car {{ id }} detail information</h2>
+<h3>{{ name }}</h3>
+
+<h4><a [routerLink]="['/cars', 8, 'Mazda']">Open Mazda</a></h4>
