--- a/src/app/cars-page/cars-page.component.html
+++ b/src/app/cars-page/cars-page.component.html
@@ -3,15 +3,23 @@
 
 <h2>Страница машин</h2>
 <hr>
+<div class="row">
+  <div class="col-xs-3">
 
-<ul class="list-group">
-  <li class="list-group-item" *ngFor="let car of cars">
-    <a 
-      [routerLink]="['/cars', car.id, car.name]"
-      [queryParams]="{year: car.year, color: car.color}"
-      fragment="pic"
-    >
-      {{car.name}}
-    </a>
-  </li>
-</ul>
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let car of cars">
+        <a 
+          [routerLink]="['/cars', car.id, car.name]"
+          [queryParams]="{year: car.year, color: car.color}"
+          fragment="pic"
+        >
+          {{car.name}}
+        </a>
+      </li>
+    </ul>
+
+  </div>
+  <div class="col-xs-9">
+     <router-outlet></router-outlet>
+  </div>
+</div>
