--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,11 @@
         >
         <a [routerLink]="'/cars'">Машины</a>
       </li>
+      <li 
+          routerLinkActive="active"
+        >
+        <a [routerLink]="'/new'">New</a>
+      </li>
       </ul>
     </div>
   </nav>
