--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
-<div
+<!-- <div
   (mousedown)="clickedDivState='active'"
   (click)="changeDivState()"
   [@clickedDiv]="clickedDivState"
-></div>
+></div> -->
+
+<div 
+  (click)="multiState = multiState === 'start' ? 'end' : 'start'" 
+  [@multi]="multiState"
+></div> 
