--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
-<!-- <div
-  (mousedown)="clickedDivState='active'"
-  (click)="changeDivState()"
-  [@clickedDiv]="clickedDivState"
-></div> -->
-
+<button class="btn btn-primary" (click)="isVisible = !isVisible">Switch</button>
+<hr>
 <div 
-  (click)="multiState = multiState === 'start' ? 'end' : 'start'" 
-  [@multi]="multiState"
-></div> 
+  [@divTrigger]="'show'"
+  class="alert alert-danger"
+  *ngIf="isVisible"
+>
+  Lorem ipsum dolor sit amet.
+</div>
