--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,9 @@
 <button class="btn btn-primary" (click)="isVisible = !isVisible">Switch</button>
-<!-- <hr>
+<hr>
 <div 
   [@divTrigger]="'show'"
   class="alert alert-danger"
   *ngIf="isVisible"
 >
   Lorem ipsum dolor sit amet.
-</div> -->
-
-<hr>
-
-<div 
-  [@changeWidth]="isVisible ? 'a' : 'b' "
-  style="height: 50px; width: 200px; background-color: red;"
-  ></div>
+</div>
