--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 body {
-    margin-top: 5%;
-    background-color: rgba(0, 0, 0, 0.246);
+  margin: 50px;
 }
