--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<!-- <div
+<div
   (click)="changeDivState()"
   [@clickedDiv]="clickedDivState"
-></div> -->
+></div>
 
 
 <hr>
@@ -17,3 +17,6 @@
 
 <hr>
 <app-photo-gallery></app-photo-gallery>
+
+<hr>
+<app-portfolio></app-portfolio>
